# AGH

./: requirements.txt
DSA/: AVL.py  BST.py  LinearSort.py  __init__.py
DSA/final_test/: Cargo.toml
Interviews/EPAM/: q1.sql
NeetCode/44/: 44.cpp  44.py
NeetCode/45/: 45.cpp  45.py
NeetCode/46/: 46.cpp  46.py
NeetCode/47/: 47.cpp  47.py
Warehouse/: .clangd  .devcontainer.json  CMakeLists.txt  Dockerfile  ENV_SETUP.md  NamingConvention.cpp  README.md  helpers.cmake  setup.bash
Warehouse/Warehouse/: Requirements.md
Warehouse/Warehouse/include/Departments/: DepartmentsList.hpp
Warehouse/Warehouse/include/Interfaces/: Aliases.hpp  IDepartment.hpp  IProduct.hpp
Warehouse/Warehouse/include/MagicEnum/: README.md  magic_enum.hpp
Warehouse/Warehouse/include/PicoJson/: README.md  picojson.h
Warehouse/Warehouse/src/: main.cpp
Warehouse/googletest/: CONTRIBUTING.md  README.md
Warehouse/googletest/googlemock/: README.md
Warehouse/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-more-actions.h  gmock-spec-builders.h
Warehouse/googletest/googlemock/include/gmock/internal/: gmock-internal-utils.h
Warehouse/googletest/googlemock/include/gmock/internal/custom/: README.md
Warehouse/googletest/googletest/: README.md
Warehouse/googletest/googletest/include/gtest/: gtest-message.h
Warehouse/googletest/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h  gtest-string.h
Warehouse/googletest/googletest/include/gtest/internal/custom/: README.md
Warehouse/googletest/googletest/src/: gtest-port.cc
(+58 files in other folders)
